--- a/Ansible/inventory/hosts.ini
+++ b/Ansible/inventory/hosts.ini
@@ -3,6 +3,7 @@
 
 [harvesterserver]
 115.146.95.66 ansible_ssh_private_key_file=~/Ansible/keys/nectarkey.pem
+115.146.95.15 ansible_ssh_private_key_file=~/Ansible/keys/nectarkey.pem
 
 [supportserver]
 115.146.95.226 ansible_ssh_private_key_file=~/Ansible/keys/huor2.ppk
