--- a/Ansible/inventory/hosts.ini
+++ b/Ansible/inventory/hosts.ini
@@ -5,5 +5,5 @@
 115.146.95.66 ansible_ssh_private_key_file=~/Ansible/keys/nectarkey.pem
 115.146.95.115 ansible_ssh_private_key_file=~/Ansible/keys/nectarkey.pem
 
-[supportserver]
+[webserver]
 115.146.95.226 ansible_ssh_private_key_file=~/Ansible/keys/huor2.ppk
