--- a/Ansible/config_whole_sys.yml
+++ b/Ansible/config_whole_sys.yml
@@ -13,7 +13,7 @@
   roles:
     - config-harvesterserver
      
-- hosts: supportserver
+- hosts: webserver
   sudo: yes
   roles:
-    - config-supportserver
+    - config-webserver
