--- a/Ansible/roles/config-harvesterserver/tasks/main.yml
+++ b/Ansible/roles/config-harvesterserver/tasks/main.yml
@@ -7,6 +7,7 @@
   pip: name={{ item }}
   with_items:
     - tweepy
+    - couchdb
     
 - name: install dependencies
   pip: name={{ item }} executable=pip3
